# backend/app/internal/app/api/openapi/types.gen.go
@@ -3,104 +3,110 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
 package openapi
 
-// Defines values for AlertTriggerArpress.
+// Defines values for AlertArpress.
 const (
-	AlertTriggerArpressN1 AlertTriggerArpress = 1
+	AlertArpressN1 AlertArpress = 1
 
-	AlertTriggerArpressN2 AlertTriggerArpress = 2
+	AlertArpressN2 AlertArpress = 2
 
-	AlertTriggerArpressN3 AlertTriggerArpress = 3
+	AlertArpressN3 AlertArpress = 3
 )
 
-// Defines values for AlertTriggerFeeltmp.
+// Defines values for AlertFeeltmp.
 const (
-	AlertTriggerFeeltmpN1 AlertTriggerFeeltmp = 1
+	AlertFeeltmpN1 AlertFeeltmp = 1
 
-	AlertTriggerFeeltmpN2 AlertTriggerFeeltmp = 2
+	AlertFeeltmpN2 AlertFeeltmp = 2
 
-	AlertTriggerFeeltmpN3 AlertTriggerFeeltmp = 3
+	AlertFeeltmpN3 AlertFeeltmp = 3
 )
 
-// Defines values for AlertTriggerRhum.
+// Defines values for AlertRhum.
 const (
-	AlertTriggerRhumN1 AlertTriggerRhum = 1
+	AlertRhumN1 AlertRhum = 1
 
-	AlertTriggerRhumN2 AlertTriggerRhum = 2
+	AlertRhumN2 AlertRhum = 2
 
-	AlertTriggerRhumN3 AlertTriggerRhum = 3
+	AlertRhumN3 AlertRhum = 3
 )
 
-// Defines values for AlertTriggerWndspd.
+// Defines values for AlertWndspd.
 const (
-	AlertTriggerWndspdN1 AlertTriggerWndspd = 1
+	AlertWndspdN1 AlertWndspd = 1
 
-	AlertTriggerWndspdN2 AlertTriggerWndspd = 2
+	AlertWndspdN2 AlertWndspd = 2
 
-	AlertTriggerWndspdN3 AlertTriggerWndspd = 3
+	AlertWndspdN3 AlertWndspd = 3
 )
 
-// Defines values for AlertTriggerWx.
+// Defines values for AlertWx.
 const (
-	AlertTriggerWxN1 AlertTriggerWx = 1
+	AlertWxN1 AlertWx = 1
 
-	AlertTriggerWxN2 AlertTriggerWx = 2
+	AlertWxN2 AlertWx = 2
 
-	AlertTriggerWxN3 AlertTriggerWx = 3
+	AlertWxN3 AlertWx = 3
 
-	AlertTriggerWxN4 AlertTriggerWx = 4
+	AlertWxN4 AlertWx = 4
 
-	AlertTriggerWxN5 AlertTriggerWx = 5
+	AlertWxN5 AlertWx = 5
 )
 
 // Alert defines model for Alert.
 type Alert struct {
-	Id       *string `json:"id,omitempty"`
-	Location *struct {
-		// 緯度
-		Lat *float32 `json:"lat,omitempty"`
+	// 気圧: `1` - 高気圧 `2` - 通常 `3` - 低気圧
+	Arpress *AlertArpress `json:"arpress"`
 
-		// 経度
-		Lon *float32 `json:"lon,omitempty"`
-	} `json:"location,omitempty"`
+	// 体感気温: `1` - ？ `2` - ？ `3` - ？
+	Feeltmp *AlertFeeltmp `json:"feeltmp"`
+	Id      string        `json:"id"`
+
+	// 緯度
+	Lat float32 `json:"lat"`
+
+	// 経度
+	Lon float32 `json:"lon"`
+
+	// 湿度: `1` - ？ `2` - ？ `3` - ？
+	Rhum *AlertRhum `json:"rhum"`
+
+	// 気温
+	Temp *float32 `json:"temp,omitempty"`
 
 	// 通知内容
-	Text    *string `json:"text,omitempty"`
-	Title   *string `json:"title,omitempty"`
-	Trigger *struct {
-		// 気圧: `1` - 高気圧 `2` - 通常 `3` - 低気圧
-		Arpress *AlertTriggerArpress `json:"arpress"`
+	Text  string `json:"text"`
+	Title string `json:"title"`
 
-		// 体感気温: `1` - ？ `2` - ？ `3` - ？
-		Feeltmp *AlertTriggerFeeltmp `json:"feeltmp"`
+	// 風速: `1` - ？ `2` - ？ `3` - ？
+	Wndspd *AlertWndspd `json:"wndspd"`
 
-		// 湿度: `1` - ？ `2` - ？ `3` - ？
-		Rhum *AlertTriggerRhum `json:"rhum"`
-
-		// 気温
-		Temp *float32 `json:"temp,omitempty"`
-
-		// 風速: `1` - ？ `2` - ？ `3` - ？
-		Wndspd *AlertTriggerWndspd `json:"wndspd"`
-
-		// 天気: `1` - 晴 `2` - 曇 `3` - 雨 `4` - 雷 `5` - 雪
-		Wx *AlertTriggerWx `json:"wx"`
-	} `json:"trigger,omitempty"`
+	// 天気: `1` - 晴 `2` - 曇 `3` - 雨 `4` - 雷 `5` - 雪
+	Wx *AlertWx `json:"wx"`
 }
 
 // 気圧: `1` - 高気圧 `2` - 通常 `3` - 低気圧
-type AlertTriggerArpress int
+type AlertArpress int
 
 // 体感気温: `1` - ？ `2` - ？ `3` - ？
-type AlertTriggerFeeltmp int
+type AlertFeeltmp int
 
 // 湿度: `1` - ？ `2` - ？ `3` - ？
-type AlertTriggerRhum int
+type AlertRhum int
 
 // 風速: `1` - ？ `2` - ？ `3` - ？
-type AlertTriggerWndspd int
+type AlertWndspd int
 
 // 天気: `1` - 晴 `2` - 曇 `3` - 雨 `4` - 雷 `5` - 雪
-type AlertTriggerWx int
+type AlertWx int
+
+// GetAlertsParams defines parameters for GetAlerts.
+type GetAlertsParams struct {
+	// ページ数
+	Page *int `json:"page,omitempty"`
+
+	// 1ページあたりの上限数
+	Limit *int `json:"limit,omitempty"`
+}
 
 // PostAlertsJSONBody defines parameters for PostAlerts.
 type PostAlertsJSONBody Alert
